# ib-governor

./: .env.example  .gitignore  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
FORCLAUDE/: index.html
HANDBOOK/: index.html
ORDER_TYPES/: index.html
RULES/: index.html
SECURITY/: index.html
config/: rules.yaml
docs/: FORCLAUDE.md  HANDBOOK.md  ORDER_TYPES.md  RULES.md  SECURITY.md  index.md
docs/reference/: actions.md  gate.md  index.md  live.md  model.md  rules.md
launchd/: com.ib-governor.daemon.plist.template  com.ib-governor.daily-summary.plist.template
reference/: index.html
reference/actions/: index.html
reference/gate/: index.html
reference/live/: index.html
reference/model/: index.html
reference/rules/: index.html
scripts/: capture_fixtures.py  pin_contract.py  restart-daemon.sh  smoke_test.py
search/: search_index.json
skills/daily-summary/: SKILL.md
skills/pre-trade/: SKILL.md
skills/pre-trade-equities/: SKILL.md
skills/pre-trade-futures/: SKILL.md
src/governor/: config.py  model.py
tests/: conftest.py  test_config.py  test_config_rules4a.py  test_config_setup.py  test_config_telegram_agent.py  test_engine.py  test_futures_rules.py  test_model.py
tests/actions/: test_executor.py  test_lockout.py  test_tokens.py
tests/comms/: test_agent_runner.py  test_agent_runner_live.py  test_ask.py  test_format.py  test_notify.py  test_proc.py  test_send.py  test_telegram.py
tests/fixtures/: account_values.json  portfolio.json
tests/gate/: test_analysis.py  (+11 more)
(+94 files in other folders)
