[project]
name = "ib-governor"
version = "0.1.0"
description = "A behavioral circuit-breaker + pre-trade gate for Interactive Brokers (IBKR) trading discipline."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["interactive-brokers", "ibkr", "trading", "risk-management", "circuit-breaker", "ib-async", "trading-discipline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Operating System :: MacOS",
    "Private :: Do Not Upload",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "ib_async>=2.1,<3",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Mikerpen22/ib-governor"
Repository = "https://github.com/Mikerpen22/ib-governor"
Documentation = "https://mikerpen22.github.io/ib-governor/"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.23"]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = ["integration: tests that require a live TWS connection (deselect with -m 'not integration')"]
asyncio_mode = "auto"
